# automacao-bi-rankingmetas

./: .env.example  .gitignore  Dockerfile  README.md  analyze_jobs.py  api_server.py  check_data.py  check_recent_activity.py  config.py  datasets_found.txt  debug_out.txt  debug_output.txt  debug_output_2.txt  debug_path.txt  debug_supabase.py  debug_url.py  diagnose_supabase.py  docker-compose.coolify.yml  docker-compose.yml  evolution_client.py  fetched_data_list.txt  file_monitor.py  fix_definitions.py  generate_daily_unidades.py  generate_weekly_unidades.py  image_generator.py  list_datasets.py  logs_debug.txt  main.py  metas_automation.py  migration.sql  migration_fixed.sql  powerbi_client.py  powerbi_data.py  probe_clients.py  probe_products.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_debug.bat  (+11 more)
clients/: email_client.py  evolution_client.py
core/: jobs.py
dax_bi/: metas.txt
scripts/: analyze_schema.py  check_columns.py  debug_jobs.py  debug_measures.py  debug_output.txt  debug_page_query.js  debug_realizado_names.py  debug_repasse.py  debug_repasse_filter.py  debug_repasse_keys.py  debug_single_insert.py  debug_source_api.py  debug_sync.py  debug_unit_136.py  debug_validation.py  deep_diag_relationships.py  delete_duplicates.py  diagnose_links.py  dump_columns.py  dump_measures.py  extract_expressions.py  final_probe.py  final_robust_sync.py  find_18k.py  generate_migration.py  get_bg_color.py  granular_sync.py  inspect_full_row.py  list_all_measures.py  list_fetched_data.py  list_measures.py  patch_page.py  repair_missing_units.py  (+6 more)
(+117 files in other folders)
